v3.6.5 (XXXX-XX-XX)
-------------------

* Fixed bad behaviour when dropping followers. A follower should be dropped
  immediately when it is officially FAILED, not only after a longish timeout.

* Fixed a bug in CollectionNameResolver which could lead to an extended busy
  spin on a core when a collection was dropped, but documents of it still
  remained in the WAL.

* Removed external file loading in a used 3rd party library (Web UI).

* Include all requests to the web interface at endpoint `/_admin/aardvark` in
  a node's requests statistics. Previously, requests going to `/_admin/aardvark`
  were excluded from the request statistics if and only if the requested
  database was the `_system` database.


v3.6.4 (2020-05-26)
-------------------

* Web UI is now using pre-compiled templates.

* Fixed an issue with truncate of a collection after a dbserver was restarted
  very quickly. This could block arangosync from making progress because the
  _jobs collection could no longer be truncated.

* Fixed issue #11652: Error: AQL: missing variable #2 (1) for node #6
  (FilterNode) while planning registers.

* Update OpenLDAP to 2.4.50.

* Fixed issue ES-545: failing modification operations led to random crashes with
  "Index out of bound" error message.

* Fixed edge cases in RocksDB primary index range lookups for operators >= and <.

* Fixed issue #11525: Address security vulnerability by updating Swagger-UI
  dependency (upgraded Swagger UI to 3.25.1).

* Updated arangosync to 0.7.5.

* Fixed ability to edit graph edge in Graph Viewer of web UI.

* Fixed issue #10371: For k-shortest-paths queries on certain graphs a condition
  to abort search was too eager and hence missed the shortest path between two
  vertices and returned a longer one.

* Fixed issue ES-605: arangodump broken when using encryption.

* Added a forgotten Plan/Version increment in cleanup code in createCollection.

* Do not loadPlan from agency whenever all collections of a database are listed.