@@ -237,7 +237,7 @@ class RestVocbaseBaseHandler : public RestBaseHandler {
                                                           AccessMode::Type mode) const;
   
   /// @brief create proper transaction context, including the proper IDs
-  std::shared_ptr<transaction::Context> createTransactionContext() const;
+  std::shared_ptr<transaction::Context> createTransactionContext(AccessMode::Type mode) const;
 
  protected:
   /// @brief request context
